<resources>
    <string name="app_name">POECurrency</string>
    <string name="some_title">Title of Project</string>
    <string name="title">POE Currency</string>
    <string name="button_search">Search</string>
    <string name="info_text">text_id</string>
    <string name="spinner_have_text">Sell</string>
    <string name="spinner_search_text">Buy</string>
    <string name="checkbox_search_all">All Sell</string>
    <string name="checkbox_search_all_2">All Buy</string>
    <string name="bottom_nav_exchange">Exchange</string>
    <string name="bottom_nav_trade">Trade</string>

    <string-array name="leagues">
        <item>Betrayal</item>
        <item>Hardcore Betrayal</item>
        <item>Standard</item>
        <item>Hardcore</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_message">Send Message</string>
    <string name="look_stock">Look stock</string>
    <string name="drop_down_icon">Drop down icon</string>
    <string name="icon_for_league_spinner">Icon for League Spinner</string>
    <string name="only_online">Only Online</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
</resources>
