<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/game_background_color">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/spinner_have_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spinner_have_text"
            android:textColor="@color/game_text_color"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/spinner_search_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spinner_search_text"
            android:textColor="@color/game_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Spinner
            android:id="@+id/spinnerSell"
            android:background="@color/game_background_color"
            app:backgroundTint="@color/game_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerBuy"
            android:background="@color/game_background_color"
            app:backgroundTint="@color/game_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/search_all_sell_checkBox"
                android:background="@color/game_icon_background_color"
                android:textColor="@color/game_text_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_search_all"
                tools:ignore="NestedWeights" />
            <CheckBox
                android:id="@+id/search_all_buy_checkBox"
                android:background="@color/game_icon_background_color"
                android:textColor="@color/game_text_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_search_all_2"
                tools:ignore="NestedWeights" />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_marginLeft="4dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/game_background_color"
            android:layout_weight="2"
            android:layout_marginStart="4dp">
            <Spinner
                android:id="@+id/league"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@android:style/Widget.Spinner"
                android:background="@drawable/border"
                android:popupBackground="@color/game_icon_background_color"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/drop_down_icon"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transactions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="120dp"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/search_icon"
        app:backgroundTint="#232420"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <RelativeLayout
        style="@style/GenericProgressBackground"
        android:id="@+id/loadingPanel"
        android:visibility="invisible"
        tools:ignore="MissingConstraints">
        <ProgressBar
            style="@style/GenericProgressIndicator"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
